--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,12 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffe6cc;
+  --foreground: #ffb366;
+  --body: #ff8000;
+  --heading: #990000;
+  --sub-heading: #994d00;
+
 }
 
 @theme inline {
@@ -10,17 +14,23 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-title: "magicalPlayful";
+  --font-body: "bunnySnaps";
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+h1 {
+  color: var(--heading);
+  font-family: var(--font-title);
+}
+
+h2 {
+  color: var(--sub-heading);
+  font-family: var(--font-body);
 }
 
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--body);
+  font-family: var(--font-body), sans-serif;
+  font-size: 26px;
 }
