--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --body: #ff8000;
   --heading: #990000;
   --sub-heading: #994d00;
+  --button-text: #804000;
+  --button-hovered: #f08000; 
 
 }
 
@@ -16,6 +18,7 @@
   --font-mono: var(--font-geist-mono);
   --font-title: "magicalPlayful";
   --font-body: "bunnySnaps";
+  --inset-shadow-md: inset 8 6px 0px rgba(0, 0, 0, 1);
 }
 
 h1 {
@@ -33,4 +36,16 @@ body {
   color: var(--body);
   font-family: var(--font-body), sans-serif;
   font-size: 26px;
+}
+
+.button-text {
+  color: var(--button-text);
+}
+
+.orange-button {
+  background-color: var(--foreground);
+}
+
+.orange-button:hover {
+  background-color: var(--button-hovered);
 }
